--- a/playground.ipynb
+++ b/playground.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = \"all\""
+    "# from IPython.core.interactiveshell import InteractiveShell\n",
+    "# InteractiveShell.ast_node_interactivity = \"all\""
    ]
   },
   {
