fix: index error

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -131,12 +131,12 @@
     "            # new face!\n",
     "            known_face_encodings.append(face_encoding)\n",
     "            known_face_results.append(rando_result())\n",
-    "            index_result = len(known_face_results)\n",
+    "            index_result = len(known_face_results) - 1\n",
     "        else:\n",
     "            # existing face\n",
     "            index_result = np.where(results)[0][0]\n",
     "\n",
-    "        print(known_face_results)\n",
+    "        # print(known_face_results)\n",
     "        if known_face_results[index_result]['status'] == 1:\n",
     "            sub_head.markdown(\"#### :green[Yes.] You \"+ known_face_results[index_result]['symptom'])\n",
     "        else:\n",
