feat: add code source

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -105,11 +105,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "st.set_page_config(\n",
+    "    page_title=\"the thing\", \n",
+    "    page_icon=\"🪨\", \n",
+    "    layout=\"centered\", \n",
+    "    initial_sidebar_state=\"collapsed\", \n",
+    "    menu_items=None\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# with col_a:\n",
     "head = st.markdown(\"### Do you have :blue[the thing]?\")\n",
     "sub_head = st.markdown(\"#### Scan your face to find out...\")\n",
-    "\n",
     "picture = st.camera_input(label=\"Scan your face\", label_visibility=\"collapsed\")\n",
+    "info_bar = st.empty()\n",
     "\n",
     "# with col_b:\n",
     "if picture:\n",
@@ -146,6 +161,8 @@
     "        pickle.dump(known_face_encodings, f)\n",
     "    with open('known_face_results.pkl', 'wb') as f:\n",
     "        pickle.dump(known_face_results, f)\n",
+    "\n",
+    "    info_bar = info_bar.markdown(\"For fun only, running [this stupid piece of code](https://github.com/knhash/the-thing)\")\n",
     "    \n",
     "\n",
     "\n"
