feat: add code source

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -162,7 +162,7 @@
     "    with open('known_face_results.pkl', 'wb') as f:\n",
     "        pickle.dump(known_face_results, f)\n",
     "\n",
-    "    info_bar = info_bar.markdown(\"For fun only, running [this stupid piece of code](https://github.com/knhash/the-thing)\")\n",
+    "    info_bar = info_bar.markdown(\"No evilness, running [this stupid piece of code](https://github.com/knhash/the-thing) for lolz\")\n",
     "    \n",
     "\n",
     "\n"
