feat: clearer privacy call out, implement regular purge

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,21 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import face_recognition\n",
     "import streamlit as st\n",
     "import numpy as np\n",
+    "from datetime import datetime\n",
     "from PIL import Image\n",
     "import pickle \n",
-    "from os.path import exists"
+    "from os.path import exists, getmtime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,21 +83,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if exists('known_face_encodings.pkl'):      \n",
-    "    with open('known_face_encodings.pkl', 'rb') as f:\n",
-    "        known_face_encodings = pickle.load(f)\n",
-    "else:\n",
-    "    known_face_encodings = []\n",
+    "seconds_in_a_week = 604800"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1686744671.990045\n"
+     ]
+    }
+   ],
+   "source": [
+    "known_face_encodings = []\n",
+    "known_face_results = []\n",
+    "\n",
+    "if exists('known_face_encodings.pkl'):   \n",
+    "    modified_time = getmtime('known_face_encodings.pkl')    \n",
+    "    age_of_modification_seconds = int(datetime.now().timestamp() - modified_time)\n",
+    "    if age_of_modification_seconds < seconds_in_a_week: # purge after 7 days of inactivity\n",
+    "        with open('known_face_encodings.pkl', 'rb') as f:\n",
+    "            known_face_encodings = pickle.load(f)    \n",
+    "            known_face_encodings = known_face_encodings[-1000:] # keep only the latest 1k embeddings in memory\n",
     "\n",
     "if exists('known_face_results.pkl'):\n",
-    "    with open('known_face_results.pkl', 'rb') as f:\n",
-    "        known_face_results = pickle.load(f)\n",
-    "else:\n",
-    "    known_face_results = []"
+    "    modified_time = getmtime('known_face_results.pkl')    \n",
+    "    age_of_modification_seconds = int(datetime.now().timestamp() - modified_time)\n",
+    "    if age_of_modification_seconds < seconds_in_a_week: # purge after 7 days of inactivity\n",
+    "        with open('known_face_results.pkl', 'rb') as f:\n",
+    "            known_face_results = pickle.load(f)\n",
+    "            known_face_results = known_face_results[-1000:] # keep only the latest 1k embeddings in memory\n"
    ]
   },
   {
@@ -124,7 +149,6 @@
     "head = st.markdown(\"### Do you have :blue[the thing]?\")\n",
     "sub_head = st.markdown(\"#### Scan your face to find out...\")\n",
     "picture = st.camera_input(label=\"Scan your face\", label_visibility=\"collapsed\")\n",
-    "info_bar = st.empty()\n",
     "\n",
     "# with col_b:\n",
     "if picture:\n",
@@ -162,7 +186,8 @@
     "    with open('known_face_results.pkl', 'wb') as f:\n",
     "        pickle.dump(known_face_results, f)\n",
     "\n",
-    "info_bar = info_bar.markdown(\"No evilness, running [this stupid piece of code](https://github.com/knhash/the-thing) for lolz\")\n",
+    "st.markdown(\"Running this stupid [piece of code](https://github.com/knhash/the-thing) for lolz.\")\n",
+    "st.caption(\"Purging image data on server regularly (latest 1k images or 7 days of inactivity)\")\n",
     "    \n",
     "\n",
     "\n"
