chore: change wording

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -186,7 +186,7 @@
     "    with open('known_face_results.pkl', 'wb') as f:\n",
     "        pickle.dump(known_face_results, f)\n",
     "\n",
-    "st.markdown(\"Running this stupid [piece of code](https://github.com/knhash/the-thing) for lolz.\")\n",
+    "st.markdown(\"No evilness, running this stupid [code](https://github.com/knhash/the-thing) for lolz.\")\n",
     "st.caption(\"Purging image data on server regularly (latest 1k images or 7 days of inactivity)\")\n",
     "    \n",
     "\n",
